--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div class="flow-container">
     <div class="step">
       <h2>① ローカルフォルダの準備</h2>
-      <p>任意の名前でフォルダを作成し、VS Codeで開く。<br>ファイル名：<code>index.html</code> を作成し、コードを保存。</p>
+      <p>任意の名前でPC内にフォルダを作成し、それをVS Codeで開く。<br>VS codeで新規ファイル：<code>index.html</code> を作成し、任意のフォルダ内に保存。</p>
     </div>
     <div class="step">
       <h2>② Gitの初期化</h2>
