--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
       <h2>① ローカルフォルダの準備</h2>
       <p>任意の名前でPC内にフォルダを作成し、それをVS Codeで開く。<br>VS codeで新規ファイル：<code>index.html</code> を作成し、任意のフォルダ内に保存。</p>
     </div>
+     <div class="step">
+      <h2>② GitHubリポジトリ作成</h2>
+      <p>GitHubで「New Repository」を作成。<br>例：<code>ga4-gtm-setup</code><br>READMEはチェックせず「Create repository」。</p>
+    </div>
     <div class="step">
-      <h2>② Gitの初期化</h2>
+      <h2>③ Gitの初期化</h2>
       <p>VS Code ターミナルで以下を実行：<br><code>git init</code></p>
     </div>
     <div class="step">
-      <h2>③ ファイルの追加と初回コミット</h2>
+      <h2>④ ファイルの追加と初回コミット</h2>
       <p><code>git add .</code><br><code>git commit -m "Initial commit for GA4GTM setup guide"</code></p>
-    </div>
-    <div class="step">
-      <h2>④ GitHubリポジトリ作成</h2>
-      <p>GitHubで「New Repository」を作成。<br>例：<code>ga4-gtm-setup</code><br>READMEはチェックせず「Create repository」。</p>
     </div>
     <div class="step">
       <h2>⑤ GitHubと接続してプッシュ</h2>
